--- a/indexCopyOriginal.html
+++ b/indexCopyOriginal.html
@@ -27,8 +27,8 @@
                 <li><a class="active" href="index.html">Inicio</a></li>
                 <li><a href="#">Nosotros</a></li>
                 <li><a href="#">Servicios</a></li>
-                <li><a href="https://wa.me/c/573106743956">Portafolio</a></li>
-                <li><a href="https://api.whatsapp.com/send/?phone=573106743956&text&type=phone_number&app_absent=0">Contacto</a></li>
+                <li><a href="#">Portafolio</a></li>
+                <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
 
