--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
             </label>
             <ul class="nav-menu">
                 <li><a class="active" href="index.html">Inicio</a></li>
-                <li><a href="https://api.whatsapp.com/send?phone=+573106743956&text=Quiero%20mas%20informacion">Nosotros</a></li>
+                <li><a
+                        href="https://api.whatsapp.com/send?phone=+573106743956&text=%C2%A1Me%20gustaria%20conocer%20mas%20de%20los%20productos%20Store%20Grace!%20%F0%9F%A4%97">Nosotros</a>
+                </li>
                 <li><a href="#">Servicios</a></li>
                 <li><a href="https://wa.me/c/573106743956">Portafolio</a></li>
-                <li><a href="https://api.whatsapp.com/send/?phone=573106743956&text&type=phone_number&app_absent=0">Contacto</a></li>
+                <li><a
+                        href="https://api.whatsapp.com/send/?phone=573106743956&text&type=phone_number&app_absent=0">Contacto</a>
+                </li>
             </ul>
         </nav>
 
@@ -97,13 +101,13 @@
                         <h3>+ 2200</h3>
                         <p>Conversaciones</p>
                     </div>
-                    
+
                 </div>
 
             </div>
 
         </div>
-        
+
     </section>
 
     <main class="services">
@@ -119,14 +123,14 @@
                         <div class="card">
                             <img src="imagenes/services-1.svg" alt="">
                             <h3>Promociones</h3>
-                            <p>Lorem ipsum
+                            <p>
                             </p>
                         </div>
 
                         <div class="card">
                             <img src="imagenes/services-2.svg" alt="">
                             <h3>Clientes</h3>
-                            <p>Lorem ipsum dolor
+                            <p>
                             </p>
                         </div>
 
@@ -162,7 +166,9 @@
                         que te permitirán disfrutar de una experiencia de belleza integral y única.
                     </p>
 
-                    <a class="btn-c" href="https://api.whatsapp.com/send/?phone=573106743956&text&type=phone_number&app_absent=0"> Contacto</a>
+                    <a class="btn-c"
+                        href="https://api.whatsapp.com/send/?phone=573106743956&text&type=phone_number&app_absent=0">
+                        Contacto</a>
 
                 </div>
 
@@ -230,6 +236,76 @@
                     </div>
                 </div>
 
+                <div class="content-portfolio">
+
+                    <div class="txt-portfolio">
+                        <h3>Arcilla fácial Detox 60gr </h3>
+                        <p>
+                            Esta mascarilla facial de arcilla DETOX de NaturalezaSalvaje, es 100% arcilla natural verde,
+                            con extracto de té verde🍃
+                            Una increible marcarilla purificante y de limpieza profunda🌪🌬que nos ayuda a eliminar y
+                            prevenir barritos, puntos negros e impurezas, y adicional nos ayuda a equilibrar el ph de
+                            nuestra piel de forma natural.
+                            Gracias a su gran poder cicatrizante es muy eficiente en aquellas pieles con cicatrices
+                            provocadas por el molesto acné 🥴.
+                        </p>
+                        <h3>$ 13.500 </h3>
+                        <a class="btn-b" href="#">Mas informacion</a>
+                    </div>
+                    <img class="img-02" src="IMGProductos/ArcillaFacial.png" alt="">
+                </div>
+
+                <div class="content-portfolio">
+                    <img class="img-01" src="IMGProductos/BalsamoCejas.png" alt="">
+                    <div class="txt-portfolio">
+                        <h3>Tonico de cejas y pestañas </h3>
+                        <p>
+                            Bálsamo para Cejas y Pestañas Con todo lo maravilloso del Aceite de Coco, la vitamina E y
+                            aceites de origen vegetal, que te ayudarán a potencializar tu mirada a través del
+                            crecimiento de tus cejas y pestañas con un estímulo natural, nutriendo cada hebra, para
+                            crear cejas y pestañas, más largas abundantes y fuertes✔️🌱💚
+                            La constancia será la encargada de lograr los resultados con este increíble producto.
+                            Un producto 100% NATURAL y VEGANO🌱 Pues todos sus componentes son de origen vegetal,
+                            ningún tipo de cera animal pues somos una Marca #CrueltyFree🐰
+                        </p>
+                        <h3>$ 6.500 </h3>
+                        <a class="btn-b" href="#">Mas informacion</a>
+                    </div>
+                </div>
+
+                <div class="content-portfolio">
+
+                    <div class="txt-portfolio">
+                        <h3>Tonico Despigmentante </h3>
+                        <p>
+                            Nada más sexy que tener los labios siempre HIDRATADOS y SANOS💋✨ Aquí tenemos un
+                            #BalsamoLabial ideal para ti ☝🏽 Con todos los beneficios del Aceite de Coco Puro🥥 y la
+                            vitamina E✨
+                            Que te ayudará en tu rutina diaria, a proteger tus labios de los factores externos y la
+                            resequedad, y lo más importante NUTRIENDO LA PIEL DE TUS LABIOS 👄
+                            No necesitas más! Para tu maquillaje natural de día a día 🌱
+                        </p>
+                        <h3>$ 6.500 </h3>
+                        <a class="btn-b" href="#">Mas informacion</a>
+                    </div>
+                    <img class="img-02" src="IMGProductos/BalsamoLabial.png" alt="">
+                </div>
+
+                <div class="content-portfolio">
+                    <img class="img-01" src="IMGProductos/SuperCombo.png" alt="">
+                    <div class="txt-portfolio">
+                        <h3>¡Super combo! 🤩</h3>
+                        <p>
+                            Increible promocion de tonico despigmentante y un bloqueador solar Sunscreen 90 SPF
+                            Para el maximo cuidado de tu piel contra los rayos ultravioleta ☀️. 
+                        </p>
+                        <h3>$ 71.000 </h3>
+                        <a class="btn-b" href="#">Mas informacion</a>
+                    </div>
+                </div>
+
+
+
             </div>
 
         </div>
@@ -251,30 +327,22 @@
                 <div class="links">
 
                     <div class="link">
-                        <h3>Enlaces</h3>
-                        <p>ponga aqui los Enlaces</p>
-                        <p>ponga aqui los Enlaces</p>
-                        <p>ponga aqui los Enlaces</p>
-                        <p>ponga aqui los Enlaces</p>
+                        <h3><strong></strong></h3>
 
+                        <li><a
+                                href="https://www.facebook.com/StoreGraceOnline?mibextid=ZbWKwL"><strong>FACEBOOK</strong></a>
+                        </li>
+                        <li><a
+                                href="https://instagram.com/storegraceonline?igshid=OGQ5ZDc2ODk2ZA=="><strong>INSTAGRAM</strong></a>
+                        </li>
+                        <p><strong>UBICACION</strong> CARRERA 54C # 147-21</p>
+                        <p><STROng>MOVIL </STROng> 3106743956</p>
                     </div>
-
-                    <div class="link">
-                        <h3>Enlaces</h3>
-                        <p>ponga aqui los Enlaces</p>
-                        <p>ponga aqui los Enlaces</p>
-                        <p>ponga aqui los Enlaces</p>
-                        <p>ponga aqui los Enlaces</p>
-
-<<<<<<< HEAD
-                    </div>     
-=======
-                    </div>
->>>>>>> a4fa54b42fb1b1c79329dbfca938db53ca396e78
-
                 </div>
 
             </div>
+
+        </div>
 
 
         </div>
