--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <div class="content-portfolio">
 
                     <div class="txt-portfolio">
-                        <h3>Tonico Despigmentante </h3>
+                        <h3>Bálsamo labial 20 gr </h3>
                         <p>
                             Nada más sexy que tener los labios siempre HIDRATADOS y SANOS💋✨ Aquí tenemos un
                             #BalsamoLabial ideal para ti ☝🏽 Con todos los beneficios del Aceite de Coco Puro🥥 y la
